Bug 1269539 - Ensure that the scroll position is restored properly on reloading a page which loads incrementally. r=tnikkel

MozReview-Commit-ID: 1qVA5yU7a7g