layout/base/nsPresShell.cpp
@@ -2417,7 +2417,6 @@ PresShell::RestoreRootScrollPosition()
 {
   nsIScrollableFrame* scrollableFrame = GetRootScrollFrameAsScrollable();
   if (scrollableFrame) {
-    scrollableFrame->SetRestoringHistoryScrollPosition(true);
     scrollableFrame->ScrollToRestoredPosition();
   }
 }
@@ -2475,11 +2474,6 @@ PresShell::EndLoad(nsIDocument *aDocument)
 void
 PresShell::LoadComplete()
 {
-  nsIScrollableFrame* scrollableFrame = GetRootScrollFrameAsScrollable();
-  if (scrollableFrame) {
-    scrollableFrame->SetRestoringHistoryScrollPosition(false);
-  }
-
   gfxTextPerfMetrics *tp = nullptr;
   if (mPresContext) {
     tp = mPresContext->GetTextPerfMetrics();
